--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,21 @@
+# Use the official Python image from the Docker Hub
 FROM python:3.10.11
 
+# copy the requirements.txt file into tmp directory
 COPY requirements.txt /tmp/requirements.txt
 
-RUN python -m pip -r install --timeout 300000 /tmp/requirements.txt
+# Upgrade pip and install requirements.txt
+RUN python -m pip install --upgrade pip &&\
+    python -m pip install --timeout 3000000 -r /tmp/requirements.txt
 
-COPY .. /app
+# Copy the entire project
+COPY . /app
 
+# Setup project workinh directory
 WORKDIR /app
 
-EXPOSE 80
+# Expose Port
+EXPOSE 8000
 
-CMD ["uvicorn", "api:app", '--host', "0.0.0.0", "--port", "80"] 
+# Run the appliaction
+CMD [ "uvicorn", "api:app", "--host", "0.0.0.0" ,"--port", "8000"]
